<resources>
    <string name="app_name" translatable="false">Cash Splitter</string>

    <string name="dumpFilePath" translatable="false">dumpfile.txt</string>

    <string name="button_plus_description">Plus</string>
    <string name="button_minus_description">Minus</string>
    <string name="button_clear_description">Clear</string>
    <string name="button_lock_description">Lock</string>
    <string name="button_down_description">Down</string>
    <string name="button_up_description">Up</string>
    <string name="button_edit_description">Edit</string>
    <string name="button_create_description">Create</string>
    <string name="button_erase_description">Erase</string>
    <string name="button_delete_description">Delete</string>

    <string name="action_settings">Settings</string>

    <string name="textView_total_text">Total: %1$s</string>
    <string name="textView_available_text">Available: %1$s</string>
    <string name="textView_not_planned_text">Not planned: %1$s</string>

    <string name="toast_cannot_go_down">This category cannot already go down</string>
    <string name="toast_cannot_go_up">This category cannot already go up</string>
    <string name="toast_need_to_select_category">Choose row by clicking</string>
    <string name="toast_dont_need_to_select_category">Unselect row</string>
    <string name="toast_cannot_delete_category">It is impossible delete category %1$s</string>
    <string name="toast_cannot_edit_category">It is impossible edit category %1$s</string>
    <string name="toast_create_collision">Category %1$s already exists</string>
    <string name="toast_edit_collision">Category %1$s already exists</string>
    <string name="toast_edit_no_changes">Category %1$s name didn\'t change</string>
    <string name="toast_plus_negative_forbidden">Cannot add negative sum</string>
    <string name="toast_minus_negative_forbidden">Cannot subtract negative sum</string>
    <string name="toast_minus_too_much_forbidden">Cannot subtract more than we have</string>
    <string name="toast_cannot_change_locked_category">Unlock to change category</string>
    <string name="toast_erased_successfully">Data was erased successfully</string>
    <string name="toast_didnt_erase">Data wasn\'t erased</string>

    <string name="dialog_delete_category_title">Delete category</string>
    <string name="dialog_delete_category_message">Do you really want to delete category %1$s?</string>

    <string name="dialog_clear_category_title">Clear category</string>
    <string name="dialog_clear_category_message">Do you really want to clear sum for category %1$s?</string>

    <string name="dialog_lock_category_title">Lock category</string>
    <string name="dialog_lock_category_message">Do you really want to lock sum for category %1$s?</string>

    <string name="dialog_unlock_category_title">Unlock category</string>
    <string name="dialog_unlock_category_message">Do you really want to unlock sum for category %1$s?</string>

    <string name="dialog_create_category_title">Create new category</string>
    <string name="dialog_create_category_hint">Type name</string>

    <string name="dialog_edit_category_title">Edit category %1$s</string>
    <string name="dialog_edit_category_hint">Type new category name</string>

    <string name="dialog_plus_category_title">Add value to category %1$s</string>
    <string name="dialog_plus_category_hint">Type value</string>

    <string name="dialog_minus_category_title">Subtract value to category %1$s</string>
    <string name="dialog_minus_category_hint">Type value from 0 till %1$, .2f</string>

    <string name="dialog_edit_available_sum_title">Edit available sum, current is %1$, .2f</string>
    <string name="dialog_edit_available_sum_hint">Type new available sum</string>

    <string name="dialog_erase_category_title">Erase all data</string>
    <string name="dialog_erase_category_hint">Type: %1$s</string>
    <string name="dialog_erase_category_password">I want to erase all</string>

    <string name="dialog_button_positive">Yes</string>
    <string name="dialog_button_negative">No</string>

    <!--TODO delete later category_default_name-->
    <string name="category_default_name">Other</string>

    <string name="fragment_main_label">Categories review</string>
    <string name="fragment_settings_label">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <string name="settings_view_useDarkTheme_key" translatable="false">useDarkTheme</string>
    <string name="settings_header_view">View</string>
    <string name="settings_view_useDarkTheme_title">Use dark theme</string>
    <string name="action_save_to_file">Create backup</string>
    <string name="action_load_from_file">Restore backup</string>
    <string name="toast_backup_created">Backup is created</string>
    <string name="toast_backup_creating_failed">Failed creating backup</string>
    <string name="toast_backup_broken">Backup is broken</string>
    <string name="toast_backup_loaded">Backup is loaded</string>
    <string name="toast_backup_loading_failed">Loading backup failed</string>
    <string name="toast_dump_file_load_fail">"Couldn\'t load dump file: %1$s"</string>
    <string name="toast_dump_file_save_fail">Couldn\'t save dump file</string>

    <string name="about_description"><b>Cash Splitter</b> is financial app for virtual splitting your money into categories, when you don\'t have opportunity to split money in bank account. When money separated in categories is much easier to control it and therefore to save.</string>
    <string name="fragment_about_label">About app</string>
    <string name="action_about">About app</string>
    <string name="button_rate_app_text">Rate app</string>
    <string name="image_logo_description">Logo icon</string>
    <string name="textView_version">Version: %1$s (%2$s)</string>
    <string name="textView_developed_by_text">Developed by: %1$s</string>
    <string name="developer_name">Dmitrii Pozdin</string>
    <string name="developer_email" translatable="false">podmev@gmail.com</string>
    <string name="textView_review_and_comments_text">All remarks, comments and suggestions about application can be sent via e-mail: \n<a href="mailto:podmev@gmail.com">podmev@gmail.com</a></string>
    <string name="playStoreAppLink" translatable="false">https://play.google.com/store/apps/details?id=com.podmev.cashsplitter</string>
    <string name="settings_fragment_main_useTotal_key" translatable="false">useTotalSum</string>
    <string name="settings_fragment_main_useAvailable_key" translatable="false">useAvailableSum</string>
    <string name="settings_fragment_main_useNotPlanned_key" translatable="false">useNotPlannedSum</string>
    <string name="settings_fragment_main_useTotal_title">Use \"Total\" sum</string>
    <string name="settings_fragment_main_useAvailable_title">Use \"Available\" sum</string>
    <string name="settings_fragment_main_useNotPlanned_title">Use \"Not planned\" sum</string>

</resources>