<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header_view">

        <SwitchPreferenceCompat
            app:key="@string/settings_view_useDarkTheme_key"
            app:title="@string/settings_view_useDarkTheme_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/fragment_main_label">

        <SwitchPreferenceCompat
            app:key="@string/settings_fragment_main_useTotal_key"
            app:title="@string/settings_fragment_main_useTotal_title"
            app:defaultValue="true"
            />

        <SwitchPreferenceCompat
            app:key="@string/settings_fragment_main_useAvailable_key"
            app:title="@string/settings_fragment_main_useAvailable_title"
            app:defaultValue="true"
            />

        <SwitchPreferenceCompat
            app:dependency="@string/settings_fragment_main_useAvailable_key"
            app:key="@string/settings_fragment_main_useNotPlanned_key"
            app:title="@string/settings_fragment_main_useNotPlanned_title"
            app:defaultValue="true"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>