<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.podmev.cashsplitter.activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_to_file"
        android:orderInCategory="200"
        android:title="@string/action_save_to_file"
        android:icon="@drawable/ic_baseline_file_upload_24"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_load_from_file"
        android:orderInCategory="200"
        android:title="@string/action_load_from_file"
        android:icon="@drawable/ic_baseline_file_download_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="never" />
</menu>