<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MainFragment">


    <TextView
        android:id="@+id/textView_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/textView_base_text"
        android:background="@color/textView_base_background"
        android:text="@string/textView_total_text"
        android:textSize="@dimen/textView_text_size" />

    <TextView
        android:id="@+id/textView_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textView_base_text"
        android:background="@color/textView_base_background"
        android:layout_marginStart="10dp"
        android:text="@string/textView_available_text"
        android:textSize="@dimen/textView_text_size" />

    <TextView
        android:id="@+id/textView_not_planned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textView_base_text"
        android:background="@color/textView_base_background"
        android:layout_marginStart="10dp"
        android:text="@string/textView_not_planned_text"
        android:textSize="@dimen/textView_text_size" />

    <LinearLayout
        android:id="@+id/up_button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_plus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_add_circle_24"
            android:contentDescription="@string/button_plus_description"
            />

        <ImageButton
            android:id="@+id/button_up"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24"
            android:contentDescription="@string/button_up_description"
            />

        <ImageButton
            android:id="@+id/button_create"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_create_new_folder_24"
            android:contentDescription="@string/button_create_description"
            />

        <ImageButton
            android:id="@+id/button_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_change_circle_24"
            android:contentDescription="@string/button_clear_description"
            />

        <ImageButton
            android:id="@+id/button_erase"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_clear_24"
            android:contentDescription="@string/button_erase_description"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/down_button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_minus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_remove_circle_24"
            android:contentDescription="@string/button_minus_description"
        />

        <ImageButton
            android:id="@+id/button_down"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_arrow_circle_down_24"
            android:contentDescription="@string/button_down_description"
            />

        <ImageButton
            android:id="@+id/button_edit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/button_edit_description"
            />

        <ImageButton
            android:id="@+id/button_lock"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_lock_24"
            android:contentDescription="@string/button_lock_description"
            />

        <ImageButton
            android:id="@+id/button_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            android:contentDescription="@string/button_delete_description"
            />

    </LinearLayout>

    <GridView
        android:id="@+id/grid_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2" />

</LinearLayout>