<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.podmev.cashsplitter.fragment.MainFragment"
        android:label="@string/fragment_main_label"
        tools:layout="@layout/fragment_main">

<!--        <action-->
<!--            android:id="@+id/action_MainFragment_to_SettingFragment"-->
<!--            app:destination="@id/SettingFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:label="@string/fragment_settings_label"
        android:name="com.podmev.cashsplitter.fragment.SettingsFragment">
    </fragment>
    <fragment
        android:id="@+id/AboutFragment"
        android:label="@string/fragment_about_label"
        android:name="com.podmev.cashsplitter.fragment.AboutFragment">
    </fragment>

    <!--Global action-->
    <action android:id="@+id/open_settings_fragment"
        app:destination="@id/SettingsFragment"/>

    <action android:id="@+id/open_about_fragment"
        app:destination="@id/AboutFragment"/>
</navigation>